--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -62,11 +62,15 @@
 
     <section data-panel="mainVizPanel">
         <div class="mainVizContainer">
-            <div class="barchart sameLine"><h4 class="wrap">Which subreddits dominate each variable/category? <i style="font-size: 18px; vertical-align: middle; margin-left: 10px" class='glyphicon glyphicon-question-sign mainVizQuestion'></i><i style="font-size: 18px; vertical-align: middle; margin-left: 10px; cursor: pointer;" class='glyphicon glyphicon-menu-right barArrow'></i></h4><br></div>
-            <div class="scatterplot sameLine"><h4>Are there relationships between certain variables?<i style="font-size: 18px; vertical-align: middle; margin-left: 10px;" class='glyphicon glyphicon-question-sign mainVizQuestion'></i><i style="font-size: 18px; vertical-align: middle; margin-left: 10px; cursor: pointer;" class='glyphicon glyphicon-menu-right scatterArrow'></i></h4><br></div>
+            <div class="barchart sameLine">
+                <h4 class="wrap">Which subreddits dominate each variable/category? <i style="font-size: 18px; vertical-align: middle; margin-left: 10px" class='glyphicon glyphicon-question-sign mainVizQuestion'></i><button type="button" title="Switch to a network view of subreddits" class="btn btn-default barButton" style="margin-left: 14px; vertical-align: middle;"><span style="vertical-align: middle;">Network</span><i style="font-size: 16px; vertical-align: middle; margin-left: 10px; cursor: pointer;" class='glyphicon glyphicon-menu-right barArrow'></i></button></h4><br>
+            </div>
+            <div class="scatterplot sameLine">
+                <h4>Are there relationships between certain variables?<i style="font-size: 18px; vertical-align: middle; margin-left: 10px;" class='glyphicon glyphicon-question-sign mainVizQuestion'></i><button type="button" title="Switch to a network view of subreddits" class="btn btn-default scatterButton" style="margin-left: 14px; vertical-align: middle;"><span style="vertical-align: middle;">Network</span><i style="font-size: 16px; vertical-align: middle; margin-left: 10px; cursor: pointer;" class='glyphicon glyphicon-menu-right barArrow'></i></button></h4><br>
+            </div>
         </div>
         <div class="chordContainer">
-            <h4 class="chordQuestion">How connected is Reddit?</select><i style="font-size: 18px; vertical-align: middle; margin-left: 10px" class='glyphicon glyphicon-question-sign chordInfo'></i><i style="font-size: 18px; vertical-align: middle; margin-left: 10px; cursor: pointer;" class='glyphicon glyphicon-menu-left chordArrow'></i></h4>
+            <h4 class="chordQuestion"><button type="button" title="Switch to a network view of subreddits" class="btn btn-default chordButton" style="margin-left: 14px; vertical-align: middle;"><i style="font-size: 16px; vertical-align: middle; cursor: pointer;" class='glyphicon glyphicon-menu-left barArrow'></i><span style="vertical-align: middle; margin-left: 5px;">Bar/Scatter</span></button><span style="margin-left: 10px;">How connected is Reddit?</span></select><i style="font-size: 18px; vertical-align: middle; margin-left: 10px" class='glyphicon glyphicon-question-sign chordInfo'></i></h4>
             <h5 style="margin-bottom: 0px" class="chordTitle">Network of subreddit mentions</h5>
             <div class="redditChord" align="center"></div>
         </div>
