Small multiples legend, made heat map a little larger

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -79,37 +79,36 @@
     <section data-panel="comparePanel">
         <table>
             <tr>
-                <td width="65%" style="vertical-align: top">
+                <td width="50%" style="vertical-align: top; text-align: center;">
                     <div>
-                        <center><h4>How do subreddit comments compare across all dimensions?</h4></center>
+                        <center><h4 style="margin-top: 0px">How do subreddit comments compare across all dimensions?</h4></center>
                         <br>
                         <div class="smallMultiples"></div>
                     </div>
                 </td>
-                <td>
-                    <br>
+                <td style="text-align: center; vertical-align: top;">
                     <div id="heatmap1"></div>
                     <div id="heatmap2"></div>
                     <table>
                         <tr>
-                            <td width="50%">
-                                <p class="wordcloud1Title h6" style="text-align: center; margin-bottom: 0px"></p><br>
+                            <td width="50%" style="text-align: center;">
+                                <br>
+                                <span class="wordcloud1Title h6" style="text-align: center; margin-bottom: 0px; margin-top: 0px"></span><br>
                             </td>
-                            <td>
-                                <p class="wordcloud2Title h6" style="text-align: center; margin-bottom: 0px"></p><br>
+                            <td style="vertical-align: bottom; text-align: center;">
+                                <br>
+                                <span class="wordcloud2Title h6" style="text-align: center; margin-bottom: 0px;  margin-top: 0px"></span><br>
                             </td>
                         </tr>
-                        <tr>
+                        <tr style="margin: 0">
                             <td>
-                                <div class="wordCloud1Container" style="text-align: center">
-                                    
-                                    <img class="wordcloud1" style="width: 95%; height: 95%"></img>
+                                <div class="wordCloud1Container" style="text-align: center;">
+                                    <img class="wordcloud1" style="width: 75%; height: 75%"></img>
                                 </div>
                             </td>
                             <td>
                                 <div class="wordCloud2Container" style="text-align: center">
-                                    
-                                    <img class="wordcloud2" style="width: 95%; height: 95%"></img>
+                                    <img class="wordcloud2" style="width: 75%; height: 75%"></img>
                                 </div>
                             </td>
                         </tr>
