--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -158,7 +158,7 @@
     </div>
 
     <div class="leftScroll">
-        <img src="arrow.png" width="30%" height="30%" id="arrow">
+        <img src="arrow.png" class="chordToggle" width="30%" height="30%" id="arrow" style="cursor: pointer;">
     </div>
 
     <script
