--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -23,10 +23,10 @@
         <span class="h4" style="margin-right: 50px">Month:</span>
         <input id="month-slider" type="text" style="width: 700px; fill: white"
           data-provide="slider"
-          data-slider-ticks="[1, 2, 3, 4, 5, 6, 7, 8, 9]"
-          data-slider-ticks-labels='["January 2016", "February 2016", "March 2016", "April 2016", "May 2016", "June 2016", "July 2016", "August 2016", "September 2016"]'
+          data-slider-ticks="[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+          data-slider-ticks-labels='["January 2016", "February 2016", "March 2016", "April 2016", "May 2016", "June 2016", "July 2016", "August 2016", "September 2016", "October 2016"]'
           data-slider-min="1"
-          data-slider-max="9"
+          data-slider-max="10"
           data-slider-step="1"
           data-slider-value="9"
           data-slider-tooltip="hide"></input>
