Fixed month slider width

--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -21,7 +21,7 @@
         <button type="button" class="aboutButton btn btn-info about" data-toggle="modal" data-target="#aboutModal">About</button>
         <h1 style="margin-bottom: 10px; margin-top: 10px">2016 Reddit Comments</h1>
         <span class="h4" style="margin-right: 50px">Month:</span>
-        <input id="month-slider" type="text" style="width: 700px; fill: white"
+        <input id="month-slider" type="text" style="width: 800px; fill: white;"
           data-provide="slider"
           data-slider-ticks="[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
           data-slider-ticks-labels='["January 2016", "February 2016", "March 2016", "April 2016", "May 2016", "June 2016", "July 2016", "August 2016", "September 2016", "October 2016"]'
