--- a/visualization/final_viz/final_viz.html
+++ b/visualization/final_viz/final_viz.html
@@ -169,20 +169,19 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <script src="lib/jquery.panelSnap.js"></script>
-
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js" charset="utf-8"></script>
     <!-- Our js files -->
     <script src="chord.js"></script>
-    <script src="scatter.js"></script>
+    <script src="core.js"></script>
+    <script src="bar_scatter.js"></script>
+    <script src="heat_map.js"></script>
+    <script src="small_multiples.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.3.0/bootstrap-slider.min.js"></script>
 
     <script src="http://spin.js.org/spin.min.js"></script>
-
-
-    
   </body>
 </html>
