--- a/visualization/final_viz.html
+++ b/visualization/final_viz.html
@@ -32,7 +32,8 @@
           data-slider-max="10"
           data-slider-step="1"
           data-slider-value="9"
-          data-slider-tooltip="hide"></input>
+          data-slider-tooltip="hide"
+          data-slider-rangeHighlights='[{ "start": 0, "end": 10 }]' />
         <br><br>
         <span class="filterHolder">
             <select class="selectpicker" id="filter-picker" data-width="fit" data-header="Filter Comments"></select><i style="font-size: 22px; vertical-align: middle; margin-left: 5px; margin-right: 25px;" class='glyphicon glyphicon-info-sign commentSubsetInfo'></i>
