Tried to make reddit icon/about button relative to screen size

--- a/visualization/final_viz.html
+++ b/visualization/final_viz.html
@@ -19,15 +19,12 @@
     <div id="spinner" style="text-align: center;">
     </div>
     <div class="navbar-fixed-top" style="vertical-align: center;">
-        <div class="row">
-            <div class="col-xs-1" id="logoNav" align="center">
-                <div id="logoBg">
-                    <br><br>
-                    <img src="redditicon.png" width="60%" height="60%">
-                    <br>
-                    <br>
+        <div class="row" style="max-height: 140px; height: 140px">
+            <div class="col-xs-1" id="logoNav" align="center" >
+                <div id="logoBg" style="height: 70%">
+                  <img src="redditicon.png" width="60%" height="100%" style="display: block; margin: 0 auto; margin-left: 22%">
                 </div>
-                <div>
+                <div height="50%" style="height: 30%">
                     <button type="button" align="center" class="aboutButton btn" data-toggle="modal" data-target="#aboutModal" id="openModal">About</button>
                 </div>
             </div>
