--- a/visualization/final_viz.html
+++ b/visualization/final_viz.html
@@ -19,13 +19,16 @@
     <div id="spinner" style="text-align: center;">
     </div>
     <div class="navbar-fixed-top" style="vertical-align: center;">
-        <div class="row" style="max-height: 140px; height: 140px">
-            <div class="col-xs-1" id="logoNav" align="center" >
-                <div id="logoBg" style="height: 70%">
-                  <img src="redditicon.png" width="60%" height="100%" style="display: block; margin: 0 auto; margin-left: 22%">
+        <div class="row" style="max-height: 140px; height: 140px;">
+            <div class="col-xs-1" id="logoNav">
+                <div id="logoBg" style="height: 70%; text-align: center">
+                    <i class="fa fa-reddit-alien fa-5x" aria-hidden="true" style="position: absolute; top: 15%; bottom: 15%; left: 30%; right:30%;"></i>
+                  <!--<img src="images/redditicon.png" width="60%" height="100%" style="display: block; margin: 0 auto; margin-left: 22%">-->
                 </div>
                 <div height="50%" style="height: 30%">
+                  <center>
                     <button type="button" align="center" class="aboutButton btn" data-toggle="modal" data-target="#aboutModal" id="openModal">About</button>
+                  </center>
                 </div>
             </div>
             <div class="col-xs-11" id="navbar-fixed-top">
@@ -193,7 +196,7 @@
     </div>
 
     <div class="leftScroll">
-        <img src="arrow.png" width="30%" height="30%" id="arrow" style="cursor: pointer;">
+        <img src="images/arrow.png" width="30%" height="30%" id="arrow" style="cursor: pointer;">
     </div>
 
     <script
@@ -214,6 +217,8 @@
     <script src="small_multiples.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js"></script>
+
+    <script src="https://use.fontawesome.com/2e97e452d6.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.3.0/bootstrap-slider.min.js"></script>
 
