Changed tools and tips a little

--- a/visualization/final_viz.html
+++ b/visualization/final_viz.html
@@ -156,7 +156,7 @@
                       <h3>Tools and Tips</h3>
                       <p>
                           There are a few different components to our visualization: an overview of subreddits, smaller visualizations that compare two subreddits in detail, and an extra visualization of how often subreddits mention each other. Relevant filters will be visible for the appropriate visualizations.
-                          <br><br>Left clicking or control+left clicking on subreddits in the main visualization will choose the first and second subreddits to compare, respectively.
+                          <br><br>Left clicking and control/cmd + left clicking on subreddits in the main visualization will choose the first and second subreddits to compare, respectively.
                           The comment subset filter allows for filtering on special subsets of the comments for a given subreddit:
 
                       <ul>
