--- a/visualization/final_viz.html
+++ b/visualization/final_viz.html
@@ -70,15 +70,15 @@
 
     <section data-panel="mainVizPanel">
         <div class="mainVizContainer">
-            <div class="barchart sameLine">
-                <h4 class="wrap">Which subreddits dominate each variable/category?<span><i style="font-size: 22px; vertical-align: middle; margin-left: 5px; margin-right: 25px;" class='glyphicon glyphicon-info-sign mainVizQuestion'></i></span></h4><br>
+            <div class="barchart">
+                <h4>Which subreddits dominate each variable/category?<span><i style="font-size: 22px; vertical-align: middle; margin-left: 5px;" class='glyphicon glyphicon-info-sign mainVizQuestion'></i></span></h4><br>
             </div>
             <div class="scatterplot sameLine">
                 <h4>Are there relationships between certain variables?</h4>
             </div>
         </div>
         <div class="chordContainer">
-            <h4 class="chordQuestion">How Connected Are Reddit Communities?<span><i style="font-size: 22px; vertical-align: middle; margin-left: 5px; margin-right: 25px;" class='glyphicon glyphicon-info-sign chordInfo'></i></span></h4>
+            <h4 class="chordQuestion">How Connected Are Reddit Communities?<span><i style="font-size: 22px; vertical-align: middle; margin-left: 5px;" class='glyphicon glyphicon-info-sign chordInfo'></i></span></h4>
             <h5 style="margin-bottom: 0px" class="chordTitle">Network of subreddit mentions</h5>
             <div class="redditChord" align="center"></div>
         </div>
