--- a/visualization/final_viz.html
+++ b/visualization/final_viz.html
@@ -71,7 +71,7 @@
     <section data-panel="mainVizPanel">
         <div class="mainVizContainer">
             <div class="barchart">
-                <h4>Which subreddits dominate each variable/category?<span><i style="font-size: 22px; vertical-align: middle; margin-left: 5px;" class='glyphicon glyphicon-info-sign mainVizQuestion'></i></span></h4><br>
+                <h4>Which subreddits dominate each variable/category?<span><i style="font-size: 22px; vertical-align: middle; margin-left: 5px;" class='glyphicon glyphicon-info-sign mainVizQuestion'></i></span></h4>
             </div>
             <div class="scatterplot sameLine">
                 <h4>Are there relationships between certain variables?</h4>
