small header change

--- a/visualization/final_viz.html
+++ b/visualization/final_viz.html
@@ -85,14 +85,13 @@
     </section>
     <br><br><br><br><br><br><br>
     <section data-panel="comparePanel" id="compare">
+        <h4 style="margin-top: 0px">How do subreddit comments compare across all dimensions?</h4><br>
         <table>
             <tr>
                 <td width="50%" style="vertical-align: top; text-align: center;" align="center">
                     <div>
                         <br>
-                        <div class="smallMultiples" align="right">
-                            <h5 style="margin-top: 0px">How do subreddit comments compare across all dimensions?</h5>
-                        </div>
+                        <div class="smallMultiples" align="right"></div>
                     </div>
                 </td>
                 <td style="text-align: center; vertical-align: top;">
