Fixed some spelling, made scatter start from 0

--- a/visualization/final_viz.html
+++ b/visualization/final_viz.html
@@ -85,7 +85,7 @@
     </section>
     <br><br><br><br><br><br><br>
     <section data-panel="comparePanel" id="compare">
-        <h4 style="margin-top: 0px">How do subreddit comments compare across all dimensions?</h4><br>
+        <h4>How do subreddit comments compare across all dimensions?</h4><br>
         <table>
             <tr>
                 <td width="50%" style="vertical-align: top; text-align: center;" align="center">
@@ -124,6 +124,7 @@
                 </td>
             </tr>
         </table>
+        <br>
     </section>
 
     <!-- About popup modal -->
@@ -160,7 +161,7 @@
                       <ul>
                           <li><b>All Comments</b>: All the comments!</li>
                           <li><b>Top Score Comments</b>: Top 5% of comments by score within each subreddit</li>
-                          <li><b>Bottom Score Comments</b>: Bottom 5% of comments by scoe within each subreddit</li>
+                          <li><b>Bottom Score Comments</b>: Bottom 5% of comments by score within each subreddit</li>
                           <li><b>Most Popular Authors</b>: Top 5% of authors by comment volume within each subreddit</li>
                           <li><b>Top Positive Comments</b>: Comments with a positive score of at least 25</li>
                           <li><b>Top Negative Comments</b>: Comments with a negative score of at least 15</li>
@@ -173,11 +174,12 @@
                       <h3>Tools</h3>
                       <p> To navigate through the info visualizations:
                       <ul>
-                          <li><b>Show Bar Chart</b>: Choose "subreddit" as X-variable.</li>
-                          <li><b>Show Scatter Plot</b>: Choose X-variable that is <u>NOT</u> "subreddit".</li>
-                          <li><b>Show Chord: Click on left arrow</b>. Righ arrow returns to bar or scatter.</li>
-                          <li><b>Select Two Subreddits</b>: CTRL + LEFT on first subreddit then LEFT CLICK on second subreddit</li>
-                          <li><b>Reset Chord:</b> press ESC</li>
+                          <li><b>Show Bar Chart</b>: Choose "subreddit" as the x-variable.</li>
+                          <li><b>Show Scatter Plot</b>: Choose an x-variable that is <u>NOT</u> "Subreddit".</li>
+                          <li><b>Show Chord: Click on left arrow</b>. Right arrow returns to bar or scatter.</li>
+                          <li><b>Select Two Subreddits</b>: LEFT CLICK on first subreddit then CTRL + LEFT CLICK on second subreddit</li>
+                          <li><b>Scroll to Subreddit Comparison</b>: Press ENTER</li>
+                          <li><b>Reset Chord:</b> Press ESC</li>
                       </ul>
                       <br>
                       Enjoy!
