Moved multiples legend to middle

--- a/visualization/final_viz.html
+++ b/visualization/final_viz.html
@@ -41,7 +41,7 @@
                        data-slider-min="1"
                        data-slider-max="10"
                        data-slider-step="1"
-                       data-slider-value="9"
+                       data-slider-value="10"
                        data-slider-tooltip="hide"
                        data-slider-rangeHighlights='[{ "start": 0, "end": 10 }]' />
                 <br><br>
@@ -88,11 +88,9 @@
         <h4>How do subreddit comments compare across all dimensions?</h4><br>
         <table>
             <tr>
-                <td width="50%" style="vertical-align: top; text-align: center;" align="center">
-                    <div>
-                        <br>
-                        <div class="smallMultiples" align="right"></div>
-                    </div>
+                <td width="50%" style="vertical-align: top;">
+                    <br>
+                    <div class="smallMultiples" align="middle"></div>
                 </td>
                 <td style="text-align: center; vertical-align: top;">
                     <div id="heatmap1"></div>
